<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context=".Login">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/logo2"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableEnd="@drawable/user"
        android:background="@drawable/corner3"
        android:fontFamily="sans-serif"
        android:elevation="7dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableEnd="@drawable/password"
                android:background="@drawable/corner3"
                android:fontFamily="sans-serif"
                android:elevation="7dp"
                android:hint="@string/password"
                android:inputType="textVisiblePassword"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_user_name" />
    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/Remember_me"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/corner2"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_box" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/OR"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner2"
        android:fontFamily="sans-serif"
        android:padding="7dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_1" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>