<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change_Password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_back"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:drawableStart="@drawable/ic_back"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/Change_Password"
                android:textColor="#595858"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Confirm_Password"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/corner3"
                android:elevation="7dp"
                android:fontFamily="sans-serif"
                android:hint="@string/Confirm_Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/New_Password" />

            <EditText
                android:id="@+id/New_Password"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/corner3"
                android:elevation="7dp"
                android:fontFamily="sans-serif"
                android:hint="@string/New_Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Old_password" />

            <EditText
                android:id="@+id/Old_password"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/corner3"
                android:elevation="7dp"
                android:fontFamily="sans-serif"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_account" />

            <Button
                android:id="@+id/btn_Confirm"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:background="@drawable/corner2"
                android:gravity="center"
                android:padding="7dp"
                android:paddingStart="15dp"
                android:text="@string/Confirm"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Confirm_Password"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>